--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ font-weight: 900;
 	}
 /* Home Style */
 #tf-home{
-	background: url(../img/shajin2.jpg);
+	background: url(../img/mohammedshajinp.jpg);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
